TFP-2661 Erstatter infotrygdhendelser med restkall, og utvider tabellen Behandlig_overlapp_infotrygd med hvilken ytelse som overlapper (#154)